--- a/bookings-page.html
+++ b/bookings-page.html
@@ -479,11 +479,12 @@
   <!-- Sidebar -->
   <div class="sidebar">
     <h1>BlkPages</h1>
-    <a href="#">Bookings</a>
-    <a href="#">Payments</a>
-    <a href="#">Reviews</a>
-    <a href="#">Loyalty</a>
-    <a href="#">Messages</a>
+    <a href="customer-dashboard.html">🏠 Dashboard</a>
+    <a href="#" style="color: #f2c94c;">Bookings</a>
+    <a href="payments-page.html">Payments</a>
+    <a href="reviews-page.html">Reviews</a>
+    <a href="loyalty-page.html">Loyalty</a>
+    <a href="messages-page.html">Messages</a>
   </div>
 
   <!-- Main content -->
@@ -506,12 +507,12 @@
       <h3>Fade District – Skin Fade</h3>
       <div class="details"><i>📅</i>28 Oct 2025 – 10:30 AM</div>
       <div class="details"><i>📍</i>221B Baker Street, Marylebone, London NW1 6XE, United Kingdom</div>
-        <div class="buttons">
+      <div class="buttons">
           <button onclick="addToCalendar('booking1')">Add to Calendar</button>
           <button onclick="viewBusinessProfile('fade-district')">View Business</button>
           <button onclick="openRescheduleModal('booking1')">Reschedule</button>
           <button onclick="openCancelModal('booking1')" class="secondary">Cancel Booking</button>
-        </div>
+      </div>
     </div>
 
     <!-- Booking Card 2 -->
