--- a/payments-page.html
+++ b/payments-page.html
@@ -386,6 +386,7 @@
   <!-- Sidebar -->
   <div class="sidebar">
     <h1>BlkPages</h1>
+    <a href="customer-dashboard.html">🏠 Dashboard</a>
     <a href="bookings-page.html">Bookings</a>
     <a href="#" style="color: #f2c94c;">Payments</a>
     <a href="reviews-page.html">Reviews</a>
