--- a/reviews-page.html
+++ b/reviews-page.html
@@ -440,6 +440,7 @@
   <!-- Sidebar -->
   <div class="sidebar">
     <h1>BlkPages</h1>
+    <a href="customer-dashboard.html">🏠 Dashboard</a>
     <a href="bookings-page.html">Bookings</a>
     <a href="payments-page.html">Payments</a>
     <a href="#" style="color: #f2c94c;">Reviews</a>
