--- a/loyalty-page.html
+++ b/loyalty-page.html
@@ -465,6 +465,7 @@
   <!-- Sidebar -->
   <div class="sidebar">
     <h1>BlkPages</h1>
+    <a href="customer-dashboard.html">🏠 Dashboard</a>
     <a href="bookings-page.html">Bookings</a>
     <a href="payments-page.html">Payments</a>
     <a href="reviews-page.html">Reviews</a>
