--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
         .gold-gradient-text {
             background: linear-gradient(90deg, #FFD35C, #D4AF37);
             -webkit-background-clip: text;
+            background-clip: text;
             -webkit-text-fill-color: transparent;
         }
         
@@ -77,7 +78,7 @@
             background: 
                 radial-gradient(circle at 30% 70%, rgba(255, 211, 92, 0.1) 0%, transparent 40%),
                 radial-gradient(circle at 70% 30%, rgba(212, 175, 55, 0.08) 0%, transparent 40%),
-                url('/Users/nnenaene/Downloads/gold map2.PNG') center center/cover no-repeat,
+                url('/Users/nnenaene/Downloads/gold map2.PNG') center center/cover no-repeat;
             animation: heroFloat 20s ease-in-out infinite;
             z-index: -1;
         }
@@ -382,29 +383,6 @@
             border-bottom: none;
         }
 
-        /* ✅ HERO SEARCH SECTION FUNCTIONALITY */
-        function getLocation() {
-            if (navigator.geolocation) {
-                navigator.geolocation.getCurrentPosition((position) => {
-                    const lat = position.coords.latitude;
-                    const lon = position.coords.longitude;
-                    document.getElementById("locationInput").value = "Using your location...";
-                    // Optional: send lat/lon to backend or geocode to postcode
-                });
-            } else {
-                alert("Geolocation not supported by your browser");
-            }
-        }
-
-        // Smooth scroll for "View all categories"
-        document.querySelectorAll('a[href^="#"]').forEach(anchor => {
-            anchor.addEventListener("click", function(e) {
-                e.preventDefault();
-                document.querySelector(this.getAttribute("href")).scrollIntoView({
-                    behavior: "smooth"
-                });
-            });
-        });
     </style>
 </head>
 <body class="text-white">
@@ -665,12 +643,24 @@
         }
         
         function redirectToLogin() {
-            localStorage.setItem('returnUrl', window.location.href);
+            // Set context for navigation-based authentication
+            if (window.setAuthReturnUrl) {
+                window.setAuthReturnUrl(window.location.href, 'navigation');
+            } else {
+                localStorage.setItem('returnUrl', window.location.href);
+                localStorage.setItem('authContext', 'navigation');
+            }
             window.location.href = 'customer-login.html';
         }
 
         function redirectToRegister() {
-            localStorage.setItem('returnUrl', window.location.href);
+            // Set context for navigation-based authentication
+            if (window.setAuthReturnUrl) {
+                window.setAuthReturnUrl(window.location.href, 'navigation');
+            } else {
+                localStorage.setItem('returnUrl', window.location.href);
+                localStorage.setItem('authContext', 'navigation');
+            }
             window.location.href = 'customer-register.html';
         }
 
@@ -822,6 +812,30 @@
 
         // Ensure header updates on every page load
         document.addEventListener('DOMContentLoaded', updateHeaderAuth);
+
+        // ✅ HERO SEARCH SECTION FUNCTIONALITY
+        function getLocation() {
+            if (navigator.geolocation) {
+                navigator.geolocation.getCurrentPosition((position) => {
+                    const lat = position.coords.latitude;
+                    const lon = position.coords.longitude;
+                    document.getElementById("locationInput").value = "Using your location...";
+                    // Optional: send lat/lon to backend or geocode to postcode
+                });
+            } else {
+                alert("Geolocation not supported by your browser");
+            }
+        }
+
+        // Smooth scroll for "View all categories"
+        document.querySelectorAll('a[href^="#"]').forEach(anchor => {
+            anchor.addEventListener("click", function(e) {
+                e.preventDefault();
+                document.querySelector(this.getAttribute("href")).scrollIntoView({
+                    behavior: "smooth"
+                });
+            });
+        });
 
         // 👇 Integration with Book Now modal logic
         const bookNowButtons = document.querySelectorAll('.book-now');
