my account page

--- a/bookings-page.html
+++ b/bookings-page.html
@@ -551,6 +551,7 @@
     <a href="reviews-page.html">Reviews</a>
     <a href="loyalty-page.html">Loyalty</a>
     <a href="messages-page.html">Messages</a>
+    <a href="account-page.html">My Account</a>
   </div>
 
   <!-- Main content -->
