--- a/customer-dashboard.html
+++ b/customer-dashboard.html
@@ -553,7 +553,7 @@
     <a href="payments-page.html">💳 Payments</a>
     <a href="reviews-page.html">☆ Reviews</a>
     <a href="loyalty-page.html">🎁 Loyalty</a>
-    <a href="profile-page.html">👤 Profile</a>
+    <a href="account-page.html">👤 My Account</a>
     <a href="messages-page.html">💬 Messages</a>
   </div>
 
