--- a/reviews-page.html
+++ b/reviews-page.html
@@ -446,6 +446,7 @@
     <a href="#" style="color: #f2c94c;">Reviews</a>
     <a href="loyalty-page.html">Loyalty</a>
     <a href="messages-page.html">Messages</a>
+    <a href="account-page.html">My Account</a>
   </div>
 
   <!-- Main content -->
