--- a/messages-page.html
+++ b/messages-page.html
@@ -440,6 +440,7 @@
     <a href="reviews-page.html">Reviews</a>
     <a href="loyalty-page.html">Loyalty</a>
     <a href="#" style="color: #f2c94c;">Messages</a>
+    <a href="account-page.html">My Account</a>
   </div>
 
   <!-- Main content -->
