--- a/bookings-page.html
+++ b/bookings-page.html
@@ -728,6 +728,11 @@
     const API_BASE = 'http://localhost:3001';
     const CUSTOMER_ID = 'replace-with-real-customer-id'; // from login
     
+    // ==========================
+    // BlkPoints Constants (must match backend)
+    // ==========================
+    const REVIEW_BONUS_POINTS = 25; // Points earned for verified review
+    
     // API INTEGRATION ACTIVE
     console.log('🔗 API Integration: Loading bookings from /api/bookings endpoint');
 
@@ -1033,7 +1038,7 @@
 
     function submitReview() {
       closeModal('reviewModal');
-      showToast('Review submitted successfully! +20 BlkPoints earned');
+      showToast(`Review submitted successfully! +${REVIEW_BONUS_POINTS} BlkPoints earned`);
     }
 
     // ==========================
